--- a/new/sass/main.scss
+++ b/new/sass/main.scss
@@ -138,6 +138,35 @@ html, body {
 					}
 				}
 			}
+			.project-info {
+				display: flex;
+				flex-flow: column;
+				align-items: center;
+				.cancel {
+					cursor: pointer;
+					align-self: flex-end;
+					img {
+						width: 30px;
+					}
+				}
+				.project-info-container {
+					.project-media{
+						img {
+							width: 70%;
+							height: 90%;
+						}
+					}
+					.project-title {
+						text-align: center;
+						font-weight: bold;
+						font-size: 20px;
+					}
+					.project-details {
+						align-self: flex-start;
+						text-align: start;
+					}
+				}
+			}
 		}
 		.notes {
 			height: 100%;
