--- a/new/stylesheets/main.css
+++ b/new/stylesheets/main.css
@@ -123,16 +123,20 @@ html, body {
   text-align: center;
 }
 /* line 112, ../sass/main.scss */
+.container .main-content .work .work-text {
+  text-align: start;
+}
+/* line 115, ../sass/main.scss */
 .container .main-content .work .projects {
   display: block;
   align-self: flex-start;
 }
-/* line 115, ../sass/main.scss */
+/* line 118, ../sass/main.scss */
 .container .main-content .work .projects .project-container {
   display: table;
   content: " ";
 }
-/* line 118, ../sass/main.scss */
+/* line 121, ../sass/main.scss */
 .container .main-content .work .projects .project-container .projectCell {
   cursor: pointer;
   font-weight: bold;
@@ -140,11 +144,11 @@ html, body {
   padding: 10px;
   transition: .2s ease-in-out;
 }
-/* line 124, ../sass/main.scss */
+/* line 127, ../sass/main.scss */
 .container .main-content .work .projects .project-container .projectCell .projectContent:hover {
   transform: scale(1.1);
 }
-/* line 128, ../sass/main.scss */
+/* line 131, ../sass/main.scss */
 .container .main-content .work .projects .project-container .description {
   width: 80%;
   text-align: center;
@@ -156,38 +160,38 @@ html, body {
   font-size: 14px;
   line-height: 1.8;
 }
-/* line 141, ../sass/main.scss */
+/* line 144, ../sass/main.scss */
 .container .main-content .work .project-info {
   display: flex;
   flex-flow: column;
   align-items: center;
 }
-/* line 145, ../sass/main.scss */
+/* line 148, ../sass/main.scss */
 .container .main-content .work .project-info .cancel {
   cursor: pointer;
   align-self: flex-end;
 }
-/* line 148, ../sass/main.scss */
+/* line 151, ../sass/main.scss */
 .container .main-content .work .project-info .cancel img {
   width: 30px;
 }
-/* line 154, ../sass/main.scss */
+/* line 157, ../sass/main.scss */
 .container .main-content .work .project-info .project-info-container .project-media img {
   width: 70%;
   height: 90%;
 }
-/* line 159, ../sass/main.scss */
+/* line 162, ../sass/main.scss */
 .container .main-content .work .project-info .project-info-container .project-title {
   text-align: center;
   font-weight: bold;
   font-size: 20px;
 }
-/* line 164, ../sass/main.scss */
+/* line 167, ../sass/main.scss */
 .container .main-content .work .project-info .project-info-container .project-details {
   align-self: flex-start;
   text-align: start;
 }
-/* line 171, ../sass/main.scss */
+/* line 174, ../sass/main.scss */
 .container .main-content .notes {
   height: 100%;
   width: 80%;
@@ -198,23 +202,27 @@ html, body {
   align-items: center;
   text-align: center;
 }
-/* line 180, ../sass/main.scss */
+/* line 182, ../sass/main.scss */
+.container .main-content .notes .notes-text {
+  text-align: start;
+}
+/* line 186, ../sass/main.scss */
 .container .main-content .notes .projectCell {
   font-weight: bold;
   font-size: large;
 }
-/* line 185, ../sass/main.scss */
+/* line 191, ../sass/main.scss */
 .container .main-content .notes .projectContent img {
   width: 200px;
   height: 200px;
 }
-/* line 190, ../sass/main.scss */
+/* line 196, ../sass/main.scss */
 .container .main-content .notes .description {
   font-weight: lighter;
   font-size: 14px;
   line-height: 1.7em;
 }
-/* line 197, ../sass/main.scss */
+/* line 203, ../sass/main.scss */
 .container .footer-wrapper {
   margin-top: auto;
   position: relative;
@@ -222,7 +230,7 @@ html, body {
   height: 80px;
   bottom: 0;
 }
-/* line 203, ../sass/main.scss */
+/* line 209, ../sass/main.scss */
 .container .footer-wrapper .footer {
   position: absolute;
   height: 80px;
@@ -232,7 +240,7 @@ html, body {
   background: white;
   justify-content: center;
 }
-/* line 211, ../sass/main.scss */
+/* line 217, ../sass/main.scss */
 .container .footer-wrapper .footer .social-container {
   display: flex;
   height: 80px;
@@ -240,13 +248,13 @@ html, body {
   flex-flow: row;
   border-top: 1px solid #e6e9eb;
 }
-/* line 217, ../sass/main.scss */
+/* line 223, ../sass/main.scss */
 .container .footer-wrapper .footer .social-container .icons {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
-/* line 221, ../sass/main.scss */
+/* line 227, ../sass/main.scss */
 .container .footer-wrapper .footer .social-container .icons img {
   display: block;
   margin: auto;
