--- a/new/sass/main.scss
+++ b/new/sass/main.scss
@@ -78,6 +78,7 @@ html, body {
 						justify-content: flex-start;
 						align-items: flex-start;
 						img {
+							pointer-events: none;
 							display: block;
 							margin: auto;
 							height: 30%;
@@ -109,64 +110,100 @@ html, body {
 			justify-content: center;
 			align-items: center;
 			text-align: center;
-			.work-text {
-				text-align: start;
-			}
-			.projects{
-				display: block;
-				align-self: flex-start;
-				.project-container{
-					display: table;
-					content: " ";
-					.projectCell{
+			.code {
+				.work-text {
+					text-align: start;
+				}
+				.projects{
+					display: block;
+					align-self: flex-start;
+					.project-container{
+						display: table;
+						content: " ";
+						.projectCell{
+							cursor: pointer;
+							font-weight: bold;
+							font-size: large;
+							padding: 10px;
+							transition: .2s ease-in-out;
+							.projectContent:hover{
+								transform: scale(1.1);
+							}
+						}
+						.description {
+							width: 80%;
+							text-align: center;
+							margin: auto;
+							padding-bottom: 10px;
+							color: #444;
+							margin-top: 10px;
+							font-weight: lighter;
+							font-size: 14px;
+							line-height: 1.8;
+						}
+					}
+				}
+				.project-info {
+					display: flex;
+					flex-flow: column;
+					align-items: center;
+					.cancel {
 						cursor: pointer;
-						font-weight: bold;
-						font-size: large;
-						padding: 10px;
-						transition: .2s ease-in-out;
-						.projectContent:hover{
-							transform: scale(1.1);
+						align-self: flex-end;
+						img {
+							width: 30px;
 						}
 					}
-					.description {
-						width: 80%;
-						text-align: center;
-						margin: auto;
-						padding-bottom: 10px;
-						color: #444;
-						margin-top: 10px;
-						font-weight: lighter;
-						font-size: 14px;
-						line-height: 1.8;
+					.project-info-container {
+						.project-media{
+							img {
+								width: 70%;
+								height: 90%;
+							}
+						}
+						.project-title {
+							text-align: center;
+							font-weight: bold;
+							font-size: 20px;
+						}
+						.project-details {
+							align-self: flex-start;
+							text-align: start;
+						}
 					}
 				}
 			}
-			.project-info {
-				display: flex;
-				flex-flow: column;
-				align-items: center;
-				.cancel {
-					cursor: pointer;
-					align-self: flex-end;
-					img {
-						width: 30px;
-					}
+			.design {
+				.design-text {
+					text-align: start;
 				}
-				.project-info-container {
-					.project-media{
-						img {
-							width: 70%;
-							height: 90%;
+				.projects{
+					display: block;
+					align-self: flex-start;
+					.project-container{
+						display: table;
+						content: " ";
+						.projectCell{
+							font-weight: bold;
+							font-size: large;
+							padding: 10px;
+							width: 50%;
+							transition: .2s ease-in-out;
 						}
-					}
-					.project-title {
-						text-align: center;
-						font-weight: bold;
-						font-size: 20px;
-					}
-					.project-details {
-						align-self: flex-start;
-						text-align: start;
+						h5 {
+							width: 100% !important;
+						}
+						.description {
+							width: 80%;
+							text-align: center;
+							margin: auto;
+							padding-bottom: 10px;
+							color: #444;
+							margin-top: 10px;
+							font-weight: lighter;
+							font-size: 14px;
+							line-height: 1.8;
+						}
 					}
 				}
 			}
