--- a/new/sass/main.scss
+++ b/new/sass/main.scss
@@ -35,9 +35,16 @@ html, body {
 		.my-logo {
 			display: flex;
 			justify-content: center;
-			img {
-				width: 270px;
-				height: 329px;
+			a{
+				display:flex;
+				justify-content: center;
+
+				img {
+					max-width: 270px;
+					max-height: 329px;
+					width:70vw;
+					height:85vw;
+				}
 			}
 
 		}
@@ -97,7 +104,6 @@ html, body {
 			width: 80%;
 			padding-top: 30px;
 			padding-bottom: 30px;
-			line-height: 2.1em;
 		}
 		.work {
 			padding-top: 30px;
