--- a/new/stylesheets/main.css
+++ b/new/stylesheets/main.css
@@ -38,43 +38,50 @@ html, body {
   justify-content: center;
 }
 /* line 38, ../sass/main.scss */
-.container .upper-nav .my-logo img {
-  width: 270px;
-  height: 329px;
+.container .upper-nav .my-logo a {
+  display: flex;
+  justify-content: center;
 }
-/* line 44, ../sass/main.scss */
+/* line 42, ../sass/main.scss */
+.container .upper-nav .my-logo a img {
+  max-width: 270px;
+  max-height: 329px;
+  width: 70vw;
+  height: 85vw;
+}
+/* line 51, ../sass/main.scss */
 .container .upper-nav .nav-container {
   width: 100%;
   display: flex;
   flex-flow: column;
 }
-/* line 48, ../sass/main.scss */
+/* line 55, ../sass/main.scss */
 .container .upper-nav .nav-container .nav-bar {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: column;
 }
-/* line 53, ../sass/main.scss */
+/* line 60, ../sass/main.scss */
 .container .upper-nav .nav-container .nav-bar .contains {
   display: flex;
   width: 50%;
   justify-content: center;
   flex-flow: row;
 }
-/* line 58, ../sass/main.scss */
+/* line 65, ../sass/main.scss */
 .container .upper-nav .nav-container .nav-bar .contains .items {
   display: flex;
   justify-content: center;
 }
-/* line 61, ../sass/main.scss */
+/* line 68, ../sass/main.scss */
 .container .upper-nav .nav-container .nav-bar .contains .items img {
   pointer-events: none;
   display: block;
   margin: auto;
   width: 45%;
 }
-/* line 69, ../sass/main.scss */
+/* line 76, ../sass/main.scss */
 .container .upper-nav .nav-container .nav-bar .work-contains {
   margin-right: 21%;
   width: 20%;
@@ -82,35 +89,34 @@ html, body {
   justify-content: center;
   flex-flow: row;
 }
-/* line 75, ../sass/main.scss */
+/* line 82, ../sass/main.scss */
 .container .upper-nav .nav-container .nav-bar .work-contains .items {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
 }
-/* line 79, ../sass/main.scss */
+/* line 86, ../sass/main.scss */
 .container .upper-nav .nav-container .nav-bar .work-contains .items img {
   pointer-events: none;
   display: block;
   margin: auto;
   width: 45%;
 }
-/* line 90, ../sass/main.scss */
+/* line 97, ../sass/main.scss */
 .container .main-content {
   display: flex;
   position: relative;
   justify-content: center;
   line-height: 2.1em;
 }
-/* line 95, ../sass/main.scss */
+/* line 102, ../sass/main.scss */
 .container .main-content .about {
   height: 100%;
   width: 80%;
   padding-top: 30px;
   padding-bottom: 30px;
-  line-height: 2.1em;
 }
-/* line 102, ../sass/main.scss */
+/* line 108, ../sass/main.scss */
 .container .main-content .work {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -122,21 +128,21 @@ html, body {
   align-items: center;
   text-align: center;
 }
-/* line 113, ../sass/main.scss */
+/* line 119, ../sass/main.scss */
 .container .main-content .work .code .work-text {
   text-align: start;
 }
-/* line 116, ../sass/main.scss */
+/* line 122, ../sass/main.scss */
 .container .main-content .work .code .projects {
   display: block;
   align-self: flex-start;
 }
-/* line 119, ../sass/main.scss */
+/* line 125, ../sass/main.scss */
 .container .main-content .work .code .projects .project-container {
   display: table;
   content: " ";
 }
-/* line 122, ../sass/main.scss */
+/* line 128, ../sass/main.scss */
 .container .main-content .work .code .projects .project-container .projectCell {
   cursor: pointer;
   font-weight: bold;
@@ -144,11 +150,11 @@ html, body {
   padding: 10px;
   transition: .2s ease-in-out;
 }
-/* line 128, ../sass/main.scss */
+/* line 134, ../sass/main.scss */
 .container .main-content .work .code .projects .project-container .projectCell .projectContent:hover {
   transform: scale(1.1);
 }
-/* line 132, ../sass/main.scss */
+/* line 138, ../sass/main.scss */
 .container .main-content .work .code .projects .project-container .description {
   width: 80%;
   text-align: center;
@@ -160,63 +166,63 @@ html, body {
   font-size: 14px;
   line-height: 1.8;
 }
-/* line 145, ../sass/main.scss */
+/* line 151, ../sass/main.scss */
 .container .main-content .work .code .project-info {
   display: flex;
   flex-flow: column;
   align-items: center;
 }
-/* line 149, ../sass/main.scss */
+/* line 155, ../sass/main.scss */
 .container .main-content .work .code .project-info .cancel {
   cursor: pointer;
   align-self: flex-end;
 }
-/* line 152, ../sass/main.scss */
+/* line 158, ../sass/main.scss */
 .container .main-content .work .code .project-info .cancel img {
   width: 30px;
 }
-/* line 158, ../sass/main.scss */
+/* line 164, ../sass/main.scss */
 .container .main-content .work .code .project-info .project-info-container .project-media img {
   width: 70%;
   height: 90%;
 }
-/* line 163, ../sass/main.scss */
+/* line 169, ../sass/main.scss */
 .container .main-content .work .code .project-info .project-info-container .project-title {
   text-align: center;
   font-weight: bold;
   font-size: 20px;
 }
-/* line 168, ../sass/main.scss */
+/* line 174, ../sass/main.scss */
 .container .main-content .work .code .project-info .project-info-container .project-details {
   align-self: flex-start;
   text-align: start;
 }
-/* line 176, ../sass/main.scss */
+/* line 182, ../sass/main.scss */
 .container .main-content .work .design .design-text {
   text-align: start;
 }
-/* line 179, ../sass/main.scss */
+/* line 185, ../sass/main.scss */
 .container .main-content .work .design .projects {
   display: block;
   align-self: flex-start;
 }
-/* line 182, ../sass/main.scss */
+/* line 188, ../sass/main.scss */
 .container .main-content .work .design .projects .project-container {
   display: table;
   content: " ";
 }
-/* line 185, ../sass/main.scss */
+/* line 191, ../sass/main.scss */
 .container .main-content .work .design .projects .project-container .projectCell {
   font-weight: bold;
   font-size: large;
   padding: 10px;
 }
-/* line 190, ../sass/main.scss */
+/* line 196, ../sass/main.scss */
 .container .main-content .work .design .projects .project-container .projectCell .projectContent img {
   max-width: 400px;
   max-height: 500px;
 }
-/* line 196, ../sass/main.scss */
+/* line 202, ../sass/main.scss */
 .container .main-content .work .design .projects .project-container .description {
   text-align: start;
   margin: auto;
@@ -227,7 +233,7 @@ html, body {
   font-size: 14px;
   line-height: 1.8;
 }
-/* line 210, ../sass/main.scss */
+/* line 216, ../sass/main.scss */
 .container .main-content .notes {
   height: 100%;
   width: 80%;
@@ -238,27 +244,27 @@ html, body {
   align-items: center;
   text-align: center;
 }
-/* line 218, ../sass/main.scss */
+/* line 224, ../sass/main.scss */
 .container .main-content .notes .notes-text {
   text-align: start;
 }
-/* line 222, ../sass/main.scss */
+/* line 228, ../sass/main.scss */
 .container .main-content .notes .projectCell {
   font-weight: bold;
   font-size: large;
 }
-/* line 227, ../sass/main.scss */
+/* line 233, ../sass/main.scss */
 .container .main-content .notes .projectContent img {
   width: 200px;
   height: 200px;
 }
-/* line 232, ../sass/main.scss */
+/* line 238, ../sass/main.scss */
 .container .main-content .notes .description {
   font-weight: lighter;
   font-size: 14px;
   line-height: 1.7em;
 }
-/* line 238, ../sass/main.scss */
+/* line 244, ../sass/main.scss */
 .container .main-content .contact {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -266,18 +272,18 @@ html, body {
   display: flex;
   flex-flow: row;
 }
-/* line 244, ../sass/main.scss */
+/* line 250, ../sass/main.scss */
 .container .main-content .contact .contact-box {
   width: 70%;
   display: flex;
   flex-flow: column;
   align-items: flex-start;
 }
-/* line 249, ../sass/main.scss */
+/* line 255, ../sass/main.scss */
 .container .main-content .contact .contact-box #contact-form {
   width: 100%;
 }
-/* line 251, ../sass/main.scss */
+/* line 257, ../sass/main.scss */
 .container .main-content .contact .contact-box #contact-form input {
   margin-bottom: 50px;
   width: 40%;
@@ -286,7 +292,7 @@ html, body {
   display: block;
   padding-bottom: 10px;
 }
-/* line 259, ../sass/main.scss */
+/* line 265, ../sass/main.scss */
 .container .main-content .contact .contact-box #contact-form textarea {
   margin-bottom: 20px;
   border: none;
@@ -294,21 +300,21 @@ html, body {
   width: 90%;
   height: 100px;
 }
-/* line 266, ../sass/main.scss */
+/* line 272, ../sass/main.scss */
 .container .main-content .contact .contact-box #contact-form #btn {
   width: 150px;
   align-self: center;
 }
-/* line 270, ../sass/main.scss */
+/* line 276, ../sass/main.scss */
 .container .main-content .contact .contact-box #contact-form input:focus,
 .container .main-content .contact .contact-box #contact-form textarea:focus {
   outline: none;
 }
-/* line 276, ../sass/main.scss */
+/* line 282, ../sass/main.scss */
 .container .main-content .contact .contact-info {
   width: 30%;
 }
-/* line 280, ../sass/main.scss */
+/* line 286, ../sass/main.scss */
 .container .main-content .foryou {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -316,16 +322,16 @@ html, body {
   display: flex;
   flex-flow: column;
 }
-/* line 286, ../sass/main.scss */
+/* line 292, ../sass/main.scss */
 .container .main-content .foryou .foryou-text {
   align-self: flex-start;
   padding-bottom: 20px;
 }
-/* line 290, ../sass/main.scss */
+/* line 296, ../sass/main.scss */
 .container .main-content .foryou .foryou-content {
   align-self: center;
 }
-/* line 295, ../sass/main.scss */
+/* line 301, ../sass/main.scss */
 .container .footer-wrapper {
   margin-top: auto;
   position: relative;
@@ -333,7 +339,7 @@ html, body {
   height: 80px;
   bottom: 0;
 }
-/* line 301, ../sass/main.scss */
+/* line 307, ../sass/main.scss */
 .container .footer-wrapper .footer {
   position: absolute;
   height: 80px;
@@ -343,7 +349,7 @@ html, body {
   background: white;
   justify-content: center;
 }
-/* line 309, ../sass/main.scss */
+/* line 315, ../sass/main.scss */
 .container .footer-wrapper .footer .social-container {
   display: flex;
   height: 80px;
@@ -351,13 +357,13 @@ html, body {
   flex-flow: row;
   border-top: 1px solid #e6e9eb;
 }
-/* line 315, ../sass/main.scss */
+/* line 321, ../sass/main.scss */
 .container .footer-wrapper .footer .social-container .icons {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
-/* line 319, ../sass/main.scss */
+/* line 325, ../sass/main.scss */
 .container .footer-wrapper .footer .social-container .icons img {
   display: block;
   margin: auto;
